# Tekken-8-Data-Tools

./: .gitignore  README.md  analyze_replays.py  cli.py  debug_main.py  enums.py  get_replays.py  get_replays_async.py  main.py  models.py  pyproject.toml  requirements.txt  setup.py  simple_gui.py  test.py  test_gui.py
queries/: character_stats.sql  players_per_power.sql  players_per_rank.sql
src/: __init__.py  analyze_csv.py  analyze_replays.py  analyze_sqlite.py  config.py  enums.py  get_replays.py  models.py  prompt.py  utils.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  analyzer.py  api_client.py  database.py  downloader.py
src/gui/: __init__.py  components.py  main_window.py
src/models/: __init__.py  enums.py  replay_data.py
src/utils/: __init__.py  file_utils.py  logger.py  logging_config.py  sql_utils.py  time_utils.py  timer.py
tests/: __init__.py  test_analyzer.py
