[project]
name = "tekken-8-data-tools"
version = "1.0.0"
description = "Tekken 8 data gathering and analysis tool"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "polars (>=1.35.2,<2.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
